# compiler-flecha

./: .gitattributes  .gitignore  ChangeLog.md  LICENSE  Main.hs  README.md  cmp.sh  compiler-flecha.cabal  debug.sh  example.flecha  flecha.hs  flecha.y  run.sh  tp1-parser-flecha.cabal
mamarracho/: .gitignore  Makefile
src/: Ast.hs  Constants.hs  Environment.hs  Json.hs  Lexer.hs  MamDumper.hs  MamTypes.hs  Mamarracho.hs  MamarrachoState.hs  Parser.y  State.hs  Tokens.hs  Types.hs
test/: Tests.hs  ast.sh  ast_test.sh  flecha_test.sh  mam.sh  tests.sh
test/ast/: .directory  test00.flecha  test01.flecha  test01.json  test03.flecha  test04.flecha  test05.flecha  test06.flecha  test06.json  test07.flecha  test08.json  test09.flecha  test09.json  test10.flecha  test10.json  test14.flecha  test14.json  test16.flecha  test17.flecha  test17.json  test18.json  test20.flecha
test/diwy/: test00.flecha  test00.json
test/foones/: test02.flecha  test02.json  test03.json  test04.json  test05.json  test07.json  test08.flecha  test11.flecha  test11.json  test12.flecha  test12.json  test13.flecha  test13.json  test15.flecha  test15.json  test16.json  test18.flecha
test/mamarracho/: .directory  .gitignore  test09.1.expected  test09.1.flecha  test09.2.expected  test09.2.flecha  test09.3.flecha  test11.1.expected  test11.1.flecha  test43.flecha  testNumOp.expected  testNumOp.flecha
