name:                compiler-flecha
version:             1.0.0
synopsis:            Flecha Parser for Parseo at UNQ
-- description:
homepage:            https://github.com/parseo-diwy/compiler-flecha 
license:             BSD3
license-file:        LICENSE
author:              Dan, Lean
maintainer:          dandanielw@gmail.com, leandro.jdl@gmail.com
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable flecha
  main-is:             Main.hs
  build-depends:       base >= 4.11 && < 5, array, containers, text, compiler-flecha
  build-tools:         happy
  ghc-options:         -Wall
  default-language:    Haskell2010
library
  build-depends:       base >=4.11 && < 5, array, containers, text
  hs-source-dirs:      src
  exposed-modules:     Ast
                       Constants
                       Environment
                       Json
                       Lexer
                       Mamarracho
                       MamTypes
                       Parser
                       Tokens

  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  main-is:             Tests.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.11 && < 5, HUnit, compiler-flecha
  default-language:    Haskell2010
