name:                tp1-parser-flecha
version:             1.0.0
synopsis:            Flecha Parser for Parseo at UNQ
-- description:
homepage:            https://github.com/parseo-diwy/tp1-parser-flecha 
license:             BSD3
license-file:        LICENSE
author:              Dan, Lean
maintainer:          dandanielw@gmail.com, leandro.jdl@gmail.com
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable flecha
  main-is:             Main.hs
  build-depends:       base >= 4.11 && < 5
    , array
    , tp1-parser-flecha
  build-tools:         happy
                     , alex
  -- ghc-options: -Wall
  default-language:    Haskell2010
library
  build-depends:       base >=4.11 && < 5
    , array
  hs-source-dirs:      src
  exposed-modules:     Lexer
                       Parser
  -- ghc-options: -Wall
  default-language:    Haskell2010
